Get rid of some guava usages.
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>